<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/typicalBlack"
    android:padding="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SignInFragment">


    <ImageView
        android:id="@+id/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:src="@drawable/logo"
        android:scaleType="center"
        android:layout_width="match_parent"
        android:layout_height="300dp"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tlOne"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/logo"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/gold"
        android:hint="@string/please_enter_email"
        android:textColorHint="@color/gold"
        app:hintTextColor="@color/gold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:textColor="@color/gold"
            android:textCursorDrawable="@color/gold"
            android:textStyle="bold"
            android:cursorVisible="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tlTwo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tlOne"
        android:layout_marginTop="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/gold"
        android:hint="@string/enter_password"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/gold"
        app:hintTextColor="@color/gold"
        android:textColorHint="@color/gold"
        app:boxBackgroundColor="@android:color/transparent"
        android:background="@android:color/transparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:textColor="@color/gold"
            android:textStyle="bold"
            android:cursorVisible="true"
            android:textCursorDrawable="@color/gold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signInBtn"
        app:layout_constraintTop_toBottomOf="@id/tlTwo"
        app:layout_constraintLeft_toLeftOf="@id/tlTwo"
        app:layout_constraintRight_toRightOf="@id/tlTwo"
        android:text="@string/sign_in"
        app:layout_constraintBottom_toTopOf="@id/signUpPage"
        android:background="@drawable/button_bg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/signUpPage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@color/gold"
        android:text="@string/click_here_to_create_a_new_account"
        android:layout_width="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content"/>



</androidx.constraintlayout.widget.ConstraintLayout>