<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/typicalBlack"
    android:padding="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SignUpFragment">


    <ImageView
        android:id="@+id/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:scaleType="center"
        android:src="@drawable/logo"
        android:layout_width="match_parent"
        android:layout_height="150dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tlOne"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/logo"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/gold"
        android:hint="@string/enter_profile_name"
        android:textColorHint="@color/gold"
        app:boxBackgroundColor="@android:color/transparent"
        app:hintTextColor="@color/gold"
        app:helperTextTextColor="@color/gold"
        app:counterTextColor="@color/gold"
        android:background="@android:color/transparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:textColor="@color/gold"
            android:maxLength="12"
            android:inputType="text"
            android:cursorVisible="true"
            android:textCursorDrawable="@color/gold"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tlTwo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:hintTextColor="@color/gold"
        app:layout_constraintTop_toBottomOf="@id/tlOne"
        android:layout_marginTop="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/gold"
        android:hint="@string/please_enter_email"
        android:textColorHint="@color/gold"
        app:helperTextTextColor="@color/gold"
        app:boxBackgroundColor="@android:color/transparent"
        android:background="@android:color/transparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:textColor="@color/gold"
            android:textStyle="bold"
            android:textCursorDrawable="@color/gold"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tlThree"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tlTwo"
        android:layout_marginTop="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/gold"
        android:hint="@string/enter_password"
        android:textColorHint="@color/gold"
        app:hintTextColor="@color/gold"
        android:layout_width="match_parent"
        app:passwordToggleEnabled="true"
        app:helperTextTextColor="@color/gold"
        app:passwordToggleTint="@color/gold"
        app:boxStrokeErrorColor="@color/red"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:textColor="@color/gold"
            android:textCursorDrawable="@color/gold"
            android:textStyle="bold"
            android:maxLength="10"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tlFour"
        app:layout_constraintLeft_toLeftOf="parent"
        app:hintTextColor="@color/gold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tlThree"
        android:layout_marginTop="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/gold"
        android:hint="@string/confirm_password"
        android:textColorHint="@color/gold"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/gold"
        android:layout_width="match_parent"
        app:counterTextColor="@color/gold"
        app:helperTextTextColor="@color/gold"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirmPassword"
            android:textColor="@color/gold"
            android:maxLength="10"
            android:textCursorDrawable="@color/gold"
            android:inputType="text"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signUpBtn"
        app:layout_constraintLeft_toLeftOf="@id/tlTwo"
        app:layout_constraintRight_toRightOf="@id/tlTwo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tlFour"
        android:text="@string/sign_up"
        android:background="@drawable/button_bg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>